add merge action for shows
